# PocketStudio

./: .coverage  .gitignore  AGENTS.md  README.md  SOUL.md  heartbeat.md  nanobot.config.template.json  pyproject.toml
docs/: PROJECT_STRUCTURE_AND_FUNCTIONS.en.md  PROJECT_STRUCTURE_AND_FUNCTIONS.md  README_CN.md  TINYAGI_PACKAGE_MAPPING.md
pocketStudio/: __init__.py  cli.py  main.py  models.py  visualizer.py
pocketStudio/api/: agents.py  chat.py  compat.py  errors.py  messages.py  payloads.py  system.py  tasks.py  teams.py  workflows.py
pocketStudio/channels/: __init__.py  telegram.py
pocketStudio/core/: config.py  database.py  dependencies.py  ids.py  json_store.py  runtime.py
pocketStudio/models/: __init__.py  agent.py  chat.py  enums.py  event.py  orchestration.py  project.py  queue.py  schedule.py  task.py  team.py  workflow.py
pocketStudio/providers/: base.py  cli_agent.py  codex.py  (+5 more)
tests/: test_agent_workspace.py  test_channel_pairing.py  test_chats_archive.py  test_cli.py  test_codex_provider_integration.py  test_frontend.py  test_heartbeat_service.py  test_ids.py  test_logs.py  test_nanobot_provider.py  test_orchestrator.py  test_plugin_service.py  test_queue_maintenance.py  test_response_queue.py  test_schedule_execution.py  test_settings_service.py  test_sse_events.py  test_subprocess_harness.py  test_team_service.py  test_telegram_channel.py  test_tinyagi_compat_api.py  test_tinyoffice_api_contract.py  test_visualizer.py  test_worker_service.py  test_workflow_service.py
tinyoffice/: README.md  package-lock.json
tools/: generate_project_docs.py
(+52 files in other folders)
