[project]
name = "pocketstudio"
version = "0.1.0"
description = "Python/FastAPI multi-agent orchestration backend inspired by TinyAGI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
pocketstudio = "pocketStudio.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["pocketStudio"]
